# pysafetensors

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
patches/: 0001-fix-missing-import.patch
pysafetensors/: __init__.py  numpy.py
pysafetensors/kaitai/: f1.py  f10be.py  f10le.py  f12be.py  f12le.py  f16be.py  f16le.py  f2be.py  f2le.py  f32be.py  f32le.py  ieee754_float.py  ndarray.py  ndarray_descriptor.py  safe_tensors_parsed_header.py  safetensors.py
tests/: tests.py
